# poo_proiect

./: readme_qt_interface.txt
1_SRD/: DCS.docx
1_SRD/Examples/: DCS.docx
2_TP/: TestPlan_.docx
2_TP/Examples/: TestPlan.docx
3_Solution/AplicatieImobiliare/: Proprietati.cpp  Proprietati.h  adaugapostarewindow.cpp  adaugapostarewindow.ui  client.cpp  client.h  cumparawindow.cpp  cumparawindow.h  favoritewindow.cpp  frameutils.cpp  frameutils.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mesageriewindow.cpp  mesageriewindow.h  mesageriewindow.ui  multumirewindow.cpp  multumirewindow.h  postarewindow.cpp  principalwindow.cpp  principalwindow.h  profilwindow.cpp  secondwindow.cpp  signinwindow.cpp  signinwindow.h
AplicatieImobiliare/: CMakeLists.txt  adaugapostarewindow.cpp  adaugapostarewindow.h  casa1.txt  cumparawindow.cpp  cumparawindow.ui  favoritewindow.cpp  favoritewindow.h  favoritewindow.ui  frameutils.h  loginwindow.h  main.cpp  mainwindow.cpp  multumirewindow.ui  postarewindow.cpp  postarewindow.h  postarewindow.ui  principalwindow.cpp  principalwindow.ui  profilwindow.cpp  profilwindow.h  profilwindow.ui  secondwindow.h  secondwindow.ui  signinwindow.ui
ProiectPOO_bun/: ClassDiagram.cd  Database.cpp  Database.h  FrameUtils.cpp  FrameUtils.h  Logger.cpp  Logger.h  ProiectPOO_bun.vcxproj  ProiectPOO_bun.vcxproj.filters  Server.cpp  Server.h  log_file.txt  main.cpp
